--- a/Downloads/AsmTemplate1/AsmTemplate/OutputAsm.build_log.htm
+++ b/Downloads/AsmTemplate1/AsmTemplate/OutputAsm.build_log.htm
@@ -21,7 +21,7 @@ Target DLL:      UL2CM3.DLL V1.162.16.0
 Dialog DLL:      TCM.DLL V1.36.2.0
  
 <h2>Project:</h2>
-C:\Users\etben\OneDrive\Desktop\PurdueCourses\F2024\ME 568 - uControllers\LabPrep\HW4-branchTestInterrruptTimer\Downloads\AsmTemplate1\AsmTemplate\AsmTemplate.uvprojx
+C:\Users\etben\OneDrive\Desktop\PurdueCourses\F2024\ME 568 - uControllers\LabPrep\HW4-master\Downloads\AsmTemplate1\AsmTemplate\AsmTemplate.uvprojx
 Project File Date:  09/21/2024
 
 <h2>Output:</h2>
@@ -29,10 +29,10 @@ Project File Date:  09/21/2024
 Rebuild target 'AsmTemplate'
 assembling lab4main.s...
 assembling startup_stm32f10x_md_vl.s...
-assembling inittime.s...
-inittime.s(67): warning: A1581W: Added 2 bytes of padding at address 0x2e
 assembling initint.s...
 initint.s(57): warning: A1581W: Added 2 bytes of padding at address 0x36
+assembling inittime.s...
+inittime.s(67): warning: A1581W: Added 2 bytes of padding at address 0x2e
 assembling serialIO.s...
 serialIO.s(285): warning: A1581W: Added 2 bytes of padding at address 0x1b6
 compiling system_stm32f10x.c...
@@ -61,7 +61,7 @@ Package Vendor: Keil
 <h2>Collection of Component Files used:</h2>
 
    * Component: ARM::CMSIS:CORE:5.2.0
-Build Time Elapsed:  00:00:01
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
